@@ -2,6 +2,7 @@
 Changes for 3.5.0  
 ==================================================================================================
 - Removed old EPICS Control System Studio from plugins.
+- Bug fix for MATH.pm: improper variable case when used with EPICS input.
 ==================================================================================================
 Changes for 3.4.3  
 ==================================================================================================
